Set pom to java 24.